@@ -1,3 +1,9 @@
+2007-08-16  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/Account.cs: Added code to update full information in
+	  ProviderUser when a contact is moved from local pending to fully
+	  authorized
+
 2007-08-15  Brady Anderson <brady.anderson@gmail.com> 
 
 	* Banter/Account.cs: Added code to discover a remote contact's media
